@@ -1,3 +1,8 @@
+2016-03-18   Mark Hatle <mark.hatle@windriver.com>
+	* dl-open.c, rtld.h, Makefile.am: Add _dl_show_scope function
+	* rtld.c: Use _dl_show_scope if RTLD_DEBUG=scopes defined
+		Generate a scope for the exectuable
+
 2016-03-10   Mark Hatle <mark.hatle@windriver.com>
 	* rtld/: Rsync to glibc-2.23 (no functional changes)
 	* dl-load.c: Fix segfault on empty dso entry
