@@ -1,3 +1,6 @@
+2016-03-18  Mark Hatle <mark.hatle@windriver.com>
+	* src/rtld: Add ability to debug scopes
+
 2016-03-10  Mark Hatle <mark.hatle@windriver.com>
 	* configure.ac, m4/libelf.m4, doc/Makefile.am, gelf/Makefile.am,
 	  gelfx/Makefile.am, gelfx32/Makefile.am, patches/Makefile.am,
